Correct spacing issues.

--- a/_sass/_base_styling.scss
+++ b/_sass/_base_styling.scss
@@ -491,7 +491,7 @@ p > span {
             li {
                 listing-style: none;
                 display: inline;
-                padding: 0 2rem;
+                padding: 0 3.2rem;
                 font-size: 1.4rem;
                 -webkit-column-break-inside: avoid;
                 page-break-inside: avoid;
